--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,43 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-color: #F1B2CE;
+  --bg-color: #000028;
+  --accent-color: #DB00FF;
+  --shadow-color: #FF0070;
+  --shadow-color-transparent: #FF007066;
+  --bg-image: url(../images/cover-image-dark.png);
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  background: var(--bg-image) center / cover no-repeat fixed;
+}
+
+.theme-dark .header__theme-menu-list {
+  color: var(--shadow-color);
+}
+
+.theme-dark .header__theme-menu-button:hover {
+  border: 1px solid var(--shadow-color-transparent);
+}
+
+.theme-dark .header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--shadow-color);
+}
+
+.theme-dark .header__theme-menu-button_active {
+  border: 1px solid var(--shadow-color);
+}
+
+.theme-dark .header__rec {
+  display: flex;
+}
+
+.theme-dark .title-decor {
+  color: var(--bg-color);
+}
+
+.theme-dark .questions__list-item-header {
+  color: var(--shadow-color);
 }
