--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,9 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  color: var(--main-color);
+  font-family: 'IBM Plex mono', sans-serif;
+  font-size: 18px;
 }
 
 h1,
@@ -20,6 +23,7 @@ h5,
 h6,
 p {
   margin: 0;
+  font-size: inherit;
 }
 
 ul {
