--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,41 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-color: #353430;
+  --bg-color: #FFF1F7;
+  --accent-color: #FFC2E6;
+  --shadow-color: #FF8DCB;
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  background: url(../images/cover-image-light.png) center / cover no-repeat fixed;
+}
+
+.theme-light .header__rec {
+  display: none;
+}
+
+.theme-light .header__theme-menu-list {
+  color: var(--main-color);
+}
+
+.theme-light .header__theme-menu-button:hover {
+  border: 1px solid var(--main-color-transparent);
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--main-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--main-color);
+}
+
+.theme-light .title-decor {
+  color: var(--main-color);
+}
+
+.theme-light .questions__list-item-header {
+  color: var(--main-color);
 }
