--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,362 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--bg-color);
+  background: var(--bg-image) center / cover no-repeat fixed;
+  padding: 0 var(--padding);
+}
+
+.header,
+.footer {
+  min-block-size: 100dvh;
+  position: relative;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 36% 37% min-content;
+}
+
+.decorated-zone:before,
+.decorated-zone:after {
+  content: '';
+  display: block;
+  inline-size: 25px;
+  block-size: 25px;
+  border-top: 1px solid var(--shadow-color);
+  border-right: 1px solid var(--shadow-color);
+  position: absolute;
+  top: var(--padding);
+  right: 0;
+}
+
+.decorated-zone:after {
+  border-top: none;
+  border-right: none;
+  border-left: 1px solid var(--shadow-color);
+  border-bottom: 1px solid var(--shadow-color);
+  top: unset;
+  right: unset;
+  bottom: var(--padding);
+  left: 0;
+}
+
+.header__rec {
+  position: absolute;
+  top: var(--padding);
+  right: 9px;
+  color: var(--shadow-color);
+  font-size: 18px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+}
+
+.header__rec:before {
+  content: 'rec';
+}
+
+.header__rec:after {
+  content: '';
+  display: inline-block;
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--shadow-color);
+  box-shadow: 0 0 4px 2px var(--shadow-color);
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+.header__theme-menu {
+  display: grid;
+  height: fit-content;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  justify-self: end;
+  inline-size: fit-content;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
+  gap: 10px;
+  color: var(--shadow-color);
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  text-transform: lowercase;
+  inline-size: 100%;
+  min-inline-size: 70px;
+  min-block-size: 26px;
+  line-height: 1rem;
+  cursor: pointer;
+  text-align: center;
+  outline: none;
+  border-bottom: 1px solid transparent;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--shadow-color-transparent);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--shadow-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--shadow-color);
+}
+
+.hero {
+  margin-block-start: 67px;
+}
+
+.hero__header {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--shadow-color);
+  line-height: .825;
+  color: var(--accent-color);
+}
+
+.hero__text {
+  line-height: 1.3;
+  font-weight: var(--bold-font);
+}
+
+.title-decor {
+  background-color: var(--shadow-color);
+  color: var(--bg-color);
+}
+
+.questions {
+  margin-block-start: 40px;
+}
+
+.questions__list-item + .questions__list-item {
+  margin-block-start: 50px;
+}
+
+.questions__list-item-header {
+  color: var(--shadow-color);
+  line-height: 1.3;
+  font-weight: var(--bold-font);
+}
+
+.questions__list-item-answer {
+  margin-block-start: 20px;
+  line-height: 1.3;
+  font-weight: normal;
+}
+
+.questions__list-item-text {
+  margin-block-start: 10px;
+  line-height: 1.3;
+}
+
+.questions__list-item-link {
+  text-shadow: 2px 2px 0 var(--shadow-color);
+  text-decoration: none;
+}
+
+.questions__list-item-link:hover {
+  border-bottom: 1px solid var(--main-color);
+}
+
+.questions__list-item-link:focus-visible {
+  outline: 1px solid var(--main-color);
+}
+
+.galery {
+  margin-block-start: 50px;
+}
+
+.galery__header {
+  margin-block-end: 10px;
+}
+
+.galery__list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  gap: 10px;
+}
+
+.galery__image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-block-start: 40px;
+}
+
+.footer__header {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  padding-top: 1px;
+  line-height: .825;
+  color: var(--accent-color);
+  text-shadow: 2px 2px 0 var(--shadow-color);
+}
+
+.fb {
+  font-weight: 800;
+}
+
+@media (width >= 768px) {
+  .header {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 28% 43% min-content;
+  }
+
+  .header__theme-menu {
+    align-self: end;
+    grid-column: 2;
+  }
+
+  .hero__header {
+    --negative-padding: calc(0px - var(--padding));
+    grid-column: span 2;
+    align-self: center;
+    transform: translateX(var(--negative-padding));
+    padding-block-start: 13px;
+  }
+
+  .hero__text  {
+    grid-column: 2;
+  }
+
+  .questions {
+    margin-block-start: 60px;
+  }
+
+  .questions__article {
+    display: grid;
+    grid-template-columns: minmax(236px, min-content) 1fr;
+    gap: 20px 20px;
+  }
+
+  .questions__list-item-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px 0;
+    grid-column: 2;
+  }
+
+  .questions__list-item-answer {
+    margin-block-start: 0;
+  }
+
+  .questions__list-item + .questions__list-item {
+    margin-block-start: 80px;
+  }
+
+  .grid-styled {
+    grid-column: span 2;
+  }
+
+  .galery {
+    margin-block-start: 80px;
+  }
+
+  .galery__header {
+    margin-block-end: 20px;
+  }
+
+  .galery__list {
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .galery__list-item:first-child {
+    grid-column: span 2;
+  }
+
+  .galery__list-item:nth-child(2) {
+    grid-row: span 2;
+  }
+
+  .galery__list-item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .galery__list-item:nth-child(5) {
+    grid-column: span 2;
+  }
+
+  .footer {
+    margin-block-start: 60px;
+  }
+}
+
+@media (width >= 1024px){
+  .header {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 6% 52.5% 24%;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    grid-column: span 2;
+  }
+
+  .header__theme-menu-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .hero__header {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    align-self: end;
+  }
+
+  .hero__text {
+    height: fit-content;
+    align-self: end;
+  }
+
+  .questions__article {
+    grid-template-columns: minmax(315px, min-content) 1fr;
+  }
+
+  .grid-styled {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .footer__header {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .header__rec {
+    display: none;
+  }
+
+  .header__theme-menu-list {
+    color: var(--main-color);
+  }
+
+  .header__theme-menu-button:hover {
+    border: 1px solid var(--main-color-transparent);
+  }
+  
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid var(--main-color);
+  }
+
+  .title-decor {
+    color: var(--main-color);
+  }
+
+  .questions__list-item-header {
+    color: var(--main-color);
+  }
 }
