--- a/styles/light.css
+++ b/styles/light.css
@@ -9,11 +9,12 @@
   --bg-color: #FFF1F7;
   --accent-color: #FFC2E6;
   --shadow-color: #FF8DCB;
+  --bg-image: url(../images/cover-image-light.png);
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
-  background: url(../images/cover-image-light.png) center / cover no-repeat fixed;
+  background: var(--bg-image) center / cover no-repeat fixed;
 }
 
 .theme-light .header__rec {
