--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,17 @@
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background-color: var(--bg-color);
   background: var(--bg-image) center / cover no-repeat fixed;
-  padding: 0 var(--padding);
 }
 
 .header,
 .footer {
   min-block-size: 100dvh;
   position: relative;
+  margin-inline: var(--padding);
+}
+
+main {
+  margin-inline: var(--padding);
 }
 
 .header {
@@ -230,7 +234,7 @@
     padding-block-start: 13px;
   }
 
-  .hero__text  {
+  .hero__text {
     grid-column: 2;
   }
 
@@ -297,7 +301,7 @@
   }
 }
 
-@media (width >= 1024px){
+@media (width >= 1024px) {
   .header {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 6% 52.5% 24%;
