--- a/styles/light.css
+++ b/styles/light.css
@@ -33,7 +33,7 @@
   border-bottom: 1px solid var(--main-color);
 }
 
-.header__theme-menu-button_active {
+.theme-light .header__theme-menu-button_active {
   border: 1px solid var(--main-color);
 }
 
