--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,7 +15,11 @@
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
-  background: var(--bg-image) center / cover no-repeat fixed;
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .theme-dark .header__theme-menu-list {
