--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,11 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background-color: var(--bg-color);
-  background: var(--bg-image) center / cover no-repeat fixed;
+  background-image:  var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .header,
