--- a/styles/light.css
+++ b/styles/light.css
@@ -9,42 +9,34 @@
   --bg-color: #FFF1F7;
   --accent-color: #FFC2E6;
   --shadow-color: #FF8DCB;
+  --shadow-color-transparent: #32312D66;
+  --page-headers-color: #353430;
+  --title-decor-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color: #353430;
+    --bg-color: #FFF1F7;
+    --accent-color: #FFC2E6;
+    --shadow-color: #FF8DCB;
+    --shadow-color-transparent: #32312D66;
+    --page-headers-color: #353430;
+    --title-decor-color: #353430;
+    --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .header__rec {
+    display: none;
+  }
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
   background-image: var(--bg-image);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 .theme-light .header__rec {
   display: none;
-}
-
-.theme-light .header__theme-menu-list {
-  color: var(--main-color);
-}
-
-.theme-light .header__theme-menu-button:hover {
-  border: 1px solid var(--main-color-transparent);
-}
-
-.theme-light .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--main-color);
-}
-
-.theme-light .header__theme-menu-button_active {
-  border: 1px solid var(--main-color);
-}
-
-.theme-light .title-decor {
-  color: var(--main-color);
-}
-
-.theme-light .questions__list-item-header {
-  color: var(--main-color);
 }
