--- a/styles/style.css
+++ b/styles/style.css
@@ -10,21 +10,23 @@
   background-attachment: fixed;
 }
 
-.header,
-.footer {
+.full-screen-height{
   min-block-size: 100dvh;
-  position: relative;
   margin-inline: var(--padding);
 }
 
-main {
+.main-content {
   margin-inline: var(--padding);
 }
 
 .header {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 36% 37% min-content;
+  grid-template-rows: 1.3fr 1.3fr .97fr;
+}
+
+.decorated-zone {
+  position: relative;
 }
 
 .decorated-zone:before,
@@ -90,7 +92,8 @@ main {
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr 1fr 1fr;
   gap: 10px;
-  color: var(--shadow-color);
+  color: var(--page-headers-color);
+  outline: none;
 }
 
 .header__theme-menu-button {
@@ -104,40 +107,36 @@ main {
   cursor: pointer;
   text-align: center;
   outline: none;
-  border-bottom: 1px solid transparent;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--shadow-color-transparent);
+  outline: 1px solid var(--shadow-color-transparent);
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--shadow-color);
+  box-shadow: 0 2px 0 -1px var(--page-headers-color);
 }
 
-.header__theme-menu-button_active {
-  border: 1px solid var(--shadow-color);
+.header__theme-menu-button.header__theme-menu-button_active {
+  outline: 1px solid var(--page-headers-color);
 }
 
 .hero {
   margin-block-start: 67px;
 }
 
-.hero__header {
+.main__header {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   text-shadow: 4px 4px 0 var(--shadow-color);
-  line-height: .825;
+  line-height: .8;
   color: var(--accent-color);
 }
 
 .hero__text {
   line-height: 1.3;
   font-weight: var(--bold-font);
-}
-
-.title-decor {
-  background-color: var(--shadow-color);
-  color: var(--bg-color);
+  height: fit-content;
+  align-self: start;
 }
 
 .questions {
@@ -148,8 +147,8 @@ main {
   margin-block-start: 50px;
 }
 
-.questions__list-item-header {
-  color: var(--shadow-color);
+.main-content__header {
+  color: var(--page-headers-color);
   line-height: 1.3;
   font-weight: var(--bold-font);
 }
@@ -160,6 +159,22 @@ main {
   font-weight: normal;
 }
 
+.title-decor {
+  background-color: var(--shadow-color);
+  color: var(--title-decor-color);
+}
+
+.font-weight-normal {
+  font-weight: normal;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  gap: 20px;
+}
+
 .questions__list-item-text {
   margin-block-start: 10px;
   line-height: 1.3;
@@ -168,10 +183,15 @@ main {
 .questions__list-item-link {
   text-shadow: 2px 2px 0 var(--shadow-color);
   text-decoration: none;
+  outline: none;
 }
 
 .questions__list-item-link:hover {
   border-bottom: 1px solid var(--main-color);
+}
+
+.questions__list-item-link:focus {
+  outline: none;
 }
 
 .questions__list-item-link:focus-visible {
@@ -191,6 +211,7 @@ main {
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
   gap: 10px;
+  margin-block-start: 10px;
 }
 
 .galery__image {
@@ -208,21 +229,13 @@ main {
 }
 
 .footer__header {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  padding-top: 1px;
-  line-height: .825;
-  color: var(--accent-color);
   text-shadow: 2px 2px 0 var(--shadow-color);
-}
-
-.fb {
-  font-weight: 800;
 }
 
 @media (width >= 768px) {
   .header {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 28% 43% min-content;
+    grid-template-rows: 0.99fr 1.5fr 1.02fr;
   }
 
   .header__theme-menu {
@@ -235,7 +248,6 @@ main {
     grid-column: span 2;
     align-self: center;
     transform: translateX(var(--negative-padding));
-    padding-block-start: 13px;
   }
 
   .hero__text {
@@ -246,29 +258,20 @@ main {
     margin-block-start: 60px;
   }
 
+  .tablet-grid-rows-span {
+    grid-row: 1 / -1;
+  }
+
   .questions__article {
-    display: grid;
     grid-template-columns: minmax(236px, min-content) 1fr;
-    gap: 20px 20px;
-  }
-
-  .questions__list-item-wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px 0;
-    grid-column: 2;
-  }
-
-  .questions__list-item-answer {
-    margin-block-start: 0;
   }
 
   .questions__list-item + .questions__list-item {
     margin-block-start: 80px;
   }
 
-  .grid-styled {
-    grid-column: span 2;
+  .grid-full-row {
+    grid-column: 1/-1;
   }
 
   .galery {
@@ -282,6 +285,7 @@ main {
   .galery__list {
     gap: 20px;
     grid-template-columns: repeat(3, 1fr);
+    margin-block-start: 20px;
   }
 
   .galery__list-item:first-child {
@@ -307,13 +311,13 @@ main {
 
 @media (width >= 1024px) {
   .header {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 6% 52.5% 24%;
+    grid-template-rows: 0.2fr 1.2fr 1fr;
   }
 
   .header__theme-menu {
     justify-self: center;
     grid-column: span 2;
+    align-self: center;
   }
 
   .header__theme-menu-list {
@@ -326,17 +330,21 @@ main {
   }
 
   .hero__text {
-    height: fit-content;
-    align-self: end;
+    align-self: center;
+    margin-block-end: 19px;
   }
 
   .questions__article {
     grid-template-columns: minmax(315px, min-content) 1fr;
   }
 
-  .grid-styled {
+  .desktop-grid-columned{
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-auto-rows: min-content;
+  }
+
+  .tablet-grid-rows-span {
+    grid-row: 1 / -1;
   }
 
   .footer__header {
@@ -344,28 +352,3 @@ main {
   }
 }
 
-@media (prefers-color-scheme: light) {
-  .header__rec {
-    display: none;
-  }
-
-  .header__theme-menu-list {
-    color: var(--main-color);
-  }
-
-  .header__theme-menu-button:hover {
-    border: 1px solid var(--main-color-transparent);
-  }
-  
-  .header__theme-menu-button:focus-visible {
-    border-bottom: 1px solid var(--main-color);
-  }
-
-  .title-decor {
-    color: var(--main-color);
-  }
-
-  .questions__list-item-header {
-    color: var(--main-color);
-  }
-}
